Mod the CSS for spacing issues with Shift layout

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ div.nc_socialPanel:not(.nc_socialPanelSide) .nc_tweetContainer {
 	flex-flow: row wrap;
 }
 
+.nc_socialPanel:not(.nc_floater):not(.nc_socialPanelSide).swp_shift {
+ 	padding:0 10px;
+}
+
 .nc_socialPanel:not(.nc_socialPanelSide) .nc_tweetContainer:nth-child(1) {
 	margin-left: 0;
 }
